src/objects/LeanData__CC_Updated_Account__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Updated Accounts</relationshipLabel>
        <relationshipName>CC_Updated_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Insert__c</fullName>
        <label>Is Insert</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Processed__c</fullName>
        <label>Is Processed</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CC Updated Account</label>
    <listViews>
        <fullName>LeanData__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CC Updated Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Updated Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>